--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>Alaram Clock</title>
 </head>
 <body>
+    <!-- DISPAY TO SHOW THE TIME -->
     <h1 id="TimeDisplayer"></h1>
+
+    <!-- FORM -->
+    <></>
     <label  for="alaram-time">Alaram Time</label>
     <input name="alaram-time" id="alaram-time" type="time" placeholder="Alaram time"></input>
 
